--- a/PropFirmApp.Server/appsettings.json
+++ b/PropFirmApp.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=mydb;User=myuser;Password=mypassword;"
+  },
   "AllowedHosts": "*"
 }
