--- a/PropFirmApp.Server/PropFirmApp.Server.csproj
+++ b/PropFirmApp.Server/PropFirmApp.Server.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-	 <TargetFramework>net10.0</TargetFramework>
+	 <TargetFramework>net9.0</TargetFramework>
 	 <Nullable>enable</Nullable>
 	 <ImplicitUsings>enable</ImplicitUsings>
 	 <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -10,20 +10,26 @@
    </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-      <Version>10.*-*</Version>
+      <Version>9.0.13</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.2" />
+    <PackageReference Include="MySqlConnector" Version="2.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\PropfirmApp.Domain.csproj" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.13">
+		  <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
     <ProjectReference Include="..\PropFirm.Dto\PropFirm.Dto.csproj" />
+    <ProjectReference Include="..\PropFirm.Infrastructure\PropFirm.Infrastructure.csproj" />
     <ProjectReference Include="..\propfirmapp.client\propfirmapp.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\PropfirmApp.Domain\PropfirmApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
