--- a/PropFirmApp.Server/appsettings.json
+++ b/PropFirmApp.Server/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=mydb;User=myuser;Password=mypassword;"
+    "DefaultConnection": "server=localhost;port=3306;database=propfirm;user=root;password=root;SslMode=None;AllowPublicKeyRetrieval=True;"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_CHANGE_IT",
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers",
+    "DurationInMinutes": 60
   },
   "AllowedHosts": "*"
 }
